# CometOS

./: ;  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build_and_test.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/graphics/: framebuffer.rs  mod.rs
src/io/: mod.rs  serial.rs  vga_buffer.rs
src/io/vga_buffer/: color.rs  writer.rs
src/memory/: allocator.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs
src/memory/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocations.rs  should_panic.rs  stack_overflow.rs  template.txt  template2.txt
