[package]
name = "cometos"
version = "0.1.0"
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { verison = "=0.9.23", features = ["map_physical_memory"]} # loads the flat binary | map_physical_memory is used for paging
volatile = "=0.2.6" # prevents rust from optimizing away writes on the vga buffer
spin = "=0.5.2" # mutex provides  mutual exclusion by blocking threads when the reasource is already locked | bascially to get synchoronized interior mutability
x86_64 = "=0.14.10" # executes x86 stuff for us
uart_16550 = "=0.2.18" # Allows us to print stuff in the console
pic8259 = "=0.10.2" # allows us to access hardware interrupts
pc-keyboard = "=0.5.0" # keyboard mappings
linked_list_allocator = "=0.9.0" # heap memory allocator
embedded-graphics = "=0.7.1" # graphics driver used to draw stuff to screen

[dependencies.lazy_static] # loads static variables on runtime
version = "1.0"
features = ["spin_no_std"] # we don't link to std,a so we need a version which doesn't require std

[dependencies.crossbeam-queue] # implements Scancode Queue system for async/await
version = "0.2.1"
default-features = false # to make it no_std compatible
features = ["alloc"]

[dependencies.conquer-once] # allows us to perform a safe one-time initialization of static values.
version = "0.2.0"
default-features = false

[dependencies.futures-util] # implements futures(async/await)
version = "0.3.4"
default-features = false # to make it no_std compatible
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio", # allows us to print to the console
  "-display", "none" # we don't need to see the qemu window while testing
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # 5 mins | we need this to prevent the test runner getting stuck in a infinite loop
